--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
     }
   ],
   "require": {
-    "php": "^5.6.*"
+    "php": "^5.6"
   },
   "autoload": {
     "psr-4": {
-      "pengzeng": "src"
+      "pengzeng\\": "src/"
     }
   }
 }
